<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">&appName;</string>
    <string name="app_logo_alt">&companyName; Logo</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>
    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change Text Size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
    <string name="menu_scorecard">Scorecard</string>
    <string name="menu_search">Search</string>
    <string name="menu_stop_read_aloud">Stop Reading</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_sort_by_course">Sort by Course</string>
    <string name="menu_sort_by_filename">Sort by Filename</string>
    <string name="menu_select_all">Select All</string>
    <string name="chat_feedback_like">Mark response helpful</string>
    <string name="chat_feedback_dislike">Mark response not helpful</string>
    <string name="chat_feedback_prompt">We are sorry the response was not helpful. Could you tell us more? (Multiple selections allowed)</string>
    <string name="chat_feedback_thanks_message" tools:ignore="DuplicateDefinition">Thank you for your feedback!</string>
    <string name="chat_feedback_sorry_message">Thank you for helping us improve.</string>
    <string name="video_filter_all">All</string>
    <string name="video_filter_favorites">Favorites</string>
    <string name="video_favorite_add">Add to favorites</string>
    <string name="video_favorite_remove">Remove from favorites</string>
    <string name="video_favorite_added_toast">Saved to favorites</string>
    <string name="video_favorite_removed_toast">Removed from favorites</string>
    <string name="ai_chat_welcome_with_name">Hello, %1$s
How can I assist you today?</string>
    <string name="ai_chat_welcome_generic">Hello! How can I assist you today?</string>
    <string name="service_tracker">&appName; Tracker Service</string>
    <string name="fragment_welcome_title">Welcome to &appName;</string>
    <string name="fragment_welcome_desc">&appName; is a mobile learning platform for delivering learning content, video and quizzes.</string>
    <string name="fragment_welcome_login_info">To get started with &appName;, you will need to login.</string>
    <string name="fragment_welcome_privacy_info">By logging in, you agree to our <a href="">Privacy Policy</a>.</string>
    <string name="fragment_welcome_powered_by">Powered by <a href="https://digital-campus.org/oppiamobile/">OppiaMobile</a></string>
    <string name="tab_title_about_ee">About Extension Essentials</string>
    <string name="tab_title_about_oppia">About OppiaMobile</string>
    <string name="tab_title_badges">Badges</string>
    <string name="tab_title_help">Help</string>
    <string name="tab_title_login">Login</string>
    <string name="tab_title_points">Points</string>
    <string name="tab_title_privacy">Privacy Policy</string>
    <string name="tab_title_terms">Terms of Service</string>
    <string name="tab_title_register">Register</string>
    <string name="tab_title_reset_password">Reset Password</string>
    <string name="tab_title_remember_username">Forgotten Username</string>
    <string name="tab_title_scorecard">Scorecard</string>
    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_welcome">Welcome</string>
    <string name="title_about">About and Help</string>
    <string name="title_baseline">Baseline</string>
    <string name="title_btn_reset_password">Reset Password</string>
    <string name="title_btn_remember_username">Forgotten Username</string>
    <string name="title_download_activity">Manage Courses</string>
    <string name="title_activity_course_index">Course Index</string>
    <string name="title_activity_course">Activity</string>
    <string name="title_course_meta">About</string>
    <string name="title_prefs">Settings</string>
    <string name="title_scorecard">Scorecard</string>
    <string name="title_tag_select_activity">Select Category</string>
    <string name="version">Version: %1$s</string>
    <string name="title_download_media">Download Media</string>
    <string name="widget_feedback_submit">Submit</string>
    <string name="widget_feedback_submit_title">Thank you for submitting your feedback.</string>
    <string name="widget_feedback_unavailable_attempts">You have already sent your feedback</string>
    <string name="widget_quiz_next">Next</string>
    <string name="widget_quiz_prev">Prev</string>
    <string name="widget_quiz_getresults">Get Results</string>
    <string name="widget_quiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
    <string name="widget_quiz_results_score">You scored: %1$.0f%%</string>
    <string name="widget_quiz_results_restart">Retake This Quiz</string>
    <string name="widget_quiz_continue">Continue &gt;&gt;</string>
    <string name="widget_quiz_baseline_completed">Thank you for completing the pre-test. You can now continue to the course.</string>
    <string name="widget_quiz_baseline_goto_course">Continue to Course &gt;&gt;</string>
    <string name="widget_quiz_image_caption">Press the image to view larger version</string>
    <string name="widget_quiz_media_caption">Press the image to start the video</string>
    <string name="widget_quiz_feedback_response_title">You answered: </string>
    <string name="widget_quiz_feedback_response_skipped">You skipped this question.</string>
    <string name="widget_quiz_feedback_feedback_title">Feedback: </string>
    <string name="widget_quiz_num_questions">%1$d questions</string>
    <string name="widget_quiz_pass_threshold">%1$d%% pass threshold </string>
    <string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_attempts">You have already attempted this quiz the max number of times allowed</string>
    <string name="widget_resource_open_file">Open \'%1$s\'</string>
    <string name="feedback_response">We\'re sorry the response wasn\'t helpful. Could you tell us more? (Multiple selections allowed)</string>
    <string name="course_context_reset">Reset</string>
    <string name="course_context_delete">Delete</string>
    <string name="course_context_update_activity">Update Activity</string>
    <string name="course_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
    <string name="course_context_delete_confirm">Are you sure you want to delete this course? It will completely remove the course from your phone.</string>
    <string name="no_courses">There are no courses currently installed</string>
    <string name="more_courses">Download More Courses</string>
    <string name="prefCurrentVersion">Current version: %1$s</string>
    <string name="prefAdvanced">Advanced Settings</string>
    <string name="prefBackgroundDataConnect">Background activity tracker</string>
    <string name="prefBackgroundDataConnect_summary">Send activity logs even when this application isn\'t running</string>
    <string name="prefContentLanguage">Change Course Language</string>
    <string name="prefInterfaceLanguage">Interface Language</string>
    <string name="prefHighlightCompleted">Highlight completed activities</string>
    <string name="prefServer">Server</string>
    <string name="prefServer_notChecked">Unchecked URL</string>
    <string name="prefServer_errorTitle">Invalid URL</string>
    <string name="prefServer_errorDescription">Please, enter a well-formed URL corresponding to your &appName;
        server endpoint</string>
    <string name="prefServerTimeoutConnection">Connection Timeout</string>
    <string name="prefServerTimeoutResponse">Response Timeout</string>
    <string name="prefServerIncompatible">Incompatible Version (older)</string>
    <string name="prefInt_errorTitle">Invalid value</string>
    <string name="prefInt_errorDescription">Please, enter a valid integer value</string>
    <string name="prefShowCourseDescription">Show course description</string>
    <string name="prefShowProgressBar">Show progress bar</string>
    <string name="prefShowSectionNumbers">Show section numbers</string>
    <string name="prefTextSize">Text size</string>
    <string name="prefUser">Username</string>
    <string name="prefUserHint">(read only)</string>
    <string name="prefLogoutEnabled">Enable logout from homepage</string>
    <string name="prefDeleteCourseEnabled">Enable deleting of courses</string>
    <string name="prefDisableNotifications">Disable notifications</string>
    <string name="prefNotifications_title">Notifications</string>
    <string name="prefSecurity_title">Security</string>
    <string name="prefAdvanced_title">Advanced</string>
    <string name="prefDisplay_title">Display</string>
    <string name="prefNotifications_description">System notifications and in-app gamification messages</string>
    <string name="prefSecurity_description">Admin protection of special actions and enabling/disabling certain functionalities from the screen</string>
    <string name="prefAdvanced_description">More advanced/technical settings</string>
    <string name="prefDisplay_description">Control how courses and contents are displayed</string>
    <string name="prefAdminProtection">Protect admin actions with password</string>
    <string name="prefAdminPassword">Change admin password</string>
    <string name="prefRemoteAdminEnabled">Enable remote administration of the device</string>
    <string name="prefSectionSystemNotifs">System notifications</string>
    <string name="prefSectionGamification">Gamification events</string>
    <string name="prefShowGamificationEvents">Show gamification events</string>
    <string name="prefDownloadEnabled">Enable course downloading from homepage</string>
    <string name="prefChangeLanguageEnabled">Enable changing language from homepage</string>
    <string name="prefStartCourseIndexCollapsed">Start course index with sections collapsed</string>
    <string name="prefAnimationTypeGamificationPoints">Gamification points animation type</string>
    <string name="prefGamificationPointsViewTypeFullAnimationSound">Full animation with sound</string>
    <string name="prefGamificationPointsViewTypeFullAnimation">Full animation</string>
    <string name="prefGamificationPointsViewTypeSimpleAnimation">Simple animation</string>
    <string name="prefGamificationPointsViewTypeNone">None</string>
    <string name="prefDurationAnimationTypeGamificationPointsView">Animation duration</string>
    <string name="prefDurationAnimation_summary">Time that the gamification points event animation stays on screen (in seconds)</string>
    <string name="prefSectionReminder">Courses not completed reminder</string>
    <string name="prefCoursesReminderEnabled">Enable reminder notifications</string>
    <string name="prefCoursesReminderIntervalTitle">Reminders interval</string>
    <string name="prefCoursesReminderDaysTitle">Reminder days</string>
    <string name="prefCoursesReminderTimeTitle">Reminder time</string>
    <string name="empty_state_media">Great! You now have all the media content for your courses downloaded onto your device.</string>
</resources>