<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar at the top -->
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <!-- Filter tabs for All / Favorites -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_filter_videos"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="10dp"
            app:tabBackground="@drawable/bg_tab_text"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabTextAppearance="@style/TabLayoutAppearance">

            <com.google.android.material.tabs.TabItem
                style="@style/TabText"
                android:text="@string/video_filter_all" />

            <com.google.android.material.tabs.TabItem
                style="@style/TabText"
                android:text="@string/video_filter_favorites" />

        </com.google.android.material.tabs.TabLayout>

        <!-- RecyclerView for video list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs_filter_videos"
            android:layout_above="@+id/bottom_navigation"
            android:layout_marginTop="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!-- ProgressBar for loading state -->
        <ProgressBar
            android:id="@+id/progress_video"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <!-- Action buttons (hidden by default) -->
        <LinearLayout
            android:id="@+id/action_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabs_filter_videos"
            android:background="@color/subtitle_bar_bg_color"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/download_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center_vertical|left"
                android:textAllCaps="true"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- Empty state message -->
        <TextView
            android:id="@+id/empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:drawableTop="@drawable/empty_state_check"
            android:drawablePadding="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:text="@string/empty_state_media"
            android:textColor="@color/text_grey"
            android:visibility="gone" />

        <!-- BottomNavigationView at the bottom -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/bottom_nav_menu" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_bg"
        android:fitsSystemWindows="true"
        android:theme="@style/Oppia.Theme.NavigationView"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/drawer_icontint"
        app:itemTextColor="@color/drawer_text"
        app:menu="@menu/drawer_main"
        tools:targetApi="lollipop" />

</androidx.drawerlayout.widget.DrawerLayout>